# rust-askama-htmx-tailwind-todo

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  fly.toml  package.json  pnpm-lock.yaml  railway.toml  tailwind.config.js  tasks.toml  todos.db
assets/: main.css
migrations/: 20240207235947_create_todo_table.sql
src/: error.rs  lib.rs  main.rs  models.rs  templates.rs  utils.rs
src/models/: app_state.rs  mod.rs  response.rs  todo.rs
src/repository/: todo.rs
src/routes/: index.rs  middleware.rs  mod.rs  todo.rs  todos.rs
src/routes/htmx/: index.rs  mod.rs  todo.rs
src/routes/json/: index.rs  todo.rs
src/service/: todo.rs
src/templates/: index.rs  todo.rs
templates/: base.html  index.html
templates/todo/: error.html  form.html  list-error.html  list.html
