[package]
name = "rust-askama-htmx-tailwind-todo "
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = { version = "0.4" }
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde_json = "1.0.113"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
